[project]
name = "robo_lab"
version = "0.1.0"
description = "Modular robotics lab: PyBullet-based env + planners + controllers"
requires-python = ">=3.10"
dependencies = [
  "pybullet>=3.2.6",
  "numpy>=1.25",
  "scipy>=1.10",
  "matplotlib>=3.8",
]
[tool.ruff]
select = ["E","F","I","W","B","UP"]
line-length = 100